--- a/Client/Simitone/Simitone.Client/Simitone.Client.csproj
+++ b/Client/Simitone/Simitone.Client/Simitone.Client.csproj
@@ -54,11 +54,14 @@
     <Compile Include="UI\Controls\UIElasticButton.cs" />
     <Compile Include="UI\Controls\UISkillDisplay.cs" />
     <Compile Include="UI\Controls\UIStencilButton.cs" />
+    <Compile Include="UI\Controls\UITouchListbox.cs" />
     <Compile Include="UI\Controls\UITouchScroll.cs" />
     <Compile Include="UI\Controls\UITwoStateButton.cs" />
     <Compile Include="UI\Controls\UIValueBar.cs" />
     <Compile Include="UI\Model\UIIconCache.cs" />
     <Compile Include="UI\Model\UIStyle.cs" />
+    <Compile Include="UI\Panels\CAS\UIFamiliesCASPanel.cs" />
+    <Compile Include="UI\Panels\CAS\UIFamilyCASItem.cs" />
     <Compile Include="UI\Panels\CAS\UIFamilyCASPanel.cs" />
     <Compile Include="UI\Panels\CAS\UISimCASPanel.cs" />
     <Compile Include="UI\Panels\LiveSubpanels\Catalog\UICatalogItem.cs" />
@@ -71,7 +74,7 @@
     <Compile Include="UI\Panels\LiveSubpanels\UIMotiveSubpanel.cs" />
     <Compile Include="UI\Panels\LiveSubpanels\UISubpanel.cs" />
     <Compile Include="UI\Panels\LotControls\UIArchTouchHelper.cs" />
-    <Compile Include="UI\Panels\UI3DThumb.cs" />
+    <Compile Include="UI\Panels\LotControls\UICallNeighborAlert.cs" />
     <Compile Include="UI\Panels\UIClockPanel.cs" />
     <Compile Include="UI\Panels\UICutawayPanel.cs" />
     <Compile Include="UI\Panels\UIHouseSelectPanel.cs" />
@@ -92,11 +95,13 @@
     <Compile Include="UI\Panels\UIRotationAnimation.cs" />
     <Compile Include="UI\Panels\UISimitoneFrontend.cs" />
     <Compile Include="UI\Panels\UISwitchAvatarPanel.cs" />
+    <Compile Include="UI\Panels\UITransDialog.cs" />
     <Compile Include="UI\Panels\WorldUI\UIHeadlineRenderer.cs" />
     <Compile Include="UI\Panels\WorldUI\UIMoneyHeadline.cs" />
     <Compile Include="UI\Screens\LoadingGameScreen.cs" />
     <Compile Include="UI\Screens\TS1CASScreen.cs" />
     <Compile Include="UI\Screens\TS1GameScreen.cs" />
+    <Compile Include="Utils\SimitoneNeighOBJExporter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\FreeSO\Other\libs\FSOMonoGame\MonoGame.Framework\MonoGame.Framework.Net.WindowsGL.csproj">
@@ -145,6 +150,21 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\3D\TEX_0.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\3D\TEX_1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\cas\btn_createfam.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\cas\btn_deletefam.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\cas\btn_movein.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\uigraphics\cas\cas_adult.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -196,6 +216,9 @@
     <Content Include="Content\uigraphics\common\btn_back.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\uigraphics\common\circle10px.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\uigraphics\dialog\ngbh_outline.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -245,6 +268,33 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\uigraphics\live\cat\cat_cancel.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\live\cat\cat_dt_food.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\live\cat\cat_dt_out.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\live\cat\cat_dt_shop.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\live\cat\cat_dt_street.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\live\cat\cat_st_spa.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\live\cat\cat_st_studio.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\live\cat\cat_vac_amen.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\live\cat\cat_vac_lodg.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\live\cat\cat_vac_recr.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\uigraphics\live\cat_btn_base.png">
@@ -658,6 +708,12 @@
     <Content Include="Content\uigraphics\ngbh\ngbh_vacat.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\uigraphics\trans\trans_cas.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\uigraphics\trans\trans_normal.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\TS1Patch\PetGym_performance.piff">
@@ -679,6 +735,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\cas.fsov">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\3D\arrow.fsom">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\3D\star.fsom">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
