--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,11 +10,14 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/*.sln'
+  solution: '**/Simitone.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
 steps:
+- checkout: self
+  submodules: recursive
+  persistCredentials: true
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
