Update azure-pipelines.yml for Azure Pipelines
Add protobuild exec

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,10 @@ steps:
 - checkout: self
   submodules: recursive
   persistCredentials: true
+
+- powershell: ./Simitone/FreeSO/Other/libs/FSOMonoGame/Protobuild.exe
+  name: Protobuild
+
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
