--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
   submodules: recursive
   persistCredentials: true
 
-- powershell: cd ./FreeSO/Other/libs/FSOMonoGame/; ./protobuild.exe --generate
+- powershell: cd ./FreeSO/Other/libs/FSOMonoGame/; ./protobuild.exe --generate; cd ../../../../
   name: Protobuild
   continueOnError: true
 
@@ -34,6 +34,7 @@ steps:
     solution: '$(solution)'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+    msbuildArgs: /t:Simitone.Windows
 
 - task: VSTest@2
   inputs:
