Update azure-pipelines.yml for Azure Pipelines
msbuild doesn't like dots

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
     solution: '$(solution)'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
-    msbuildArgs: /t:Simitone.Windows
+    msbuildArgs: /t:Simitone_Windows
 
 - task: VSTest@2
   inputs:
