--- a/Client/Simitone/Simitone.Client/Simitone.Client.csproj
+++ b/Client/Simitone/Simitone.Client/Simitone.Client.csproj
@@ -77,6 +77,7 @@
     <Compile Include="UI\Panels\LotControls\UIArchTouchHelper.cs" />
     <Compile Include="UI\Panels\LotControls\UICallNeighborAlert.cs" />
     <Compile Include="UI\Panels\LotControls\UISelectSkinAlert.cs" />
+    <Compile Include="UI\Panels\UICheatTextbox.cs" />
     <Compile Include="UI\Panels\UIClockPanel.cs" />
     <Compile Include="UI\Panels\UICutawayPanel.cs" />
     <Compile Include="UI\Panels\UIHouseSelectPanel.cs" />
